--- a/SDG/build.gradle
+++ b/SDG/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id("com.ryandens.javaagent-test") version "0.5.1"
 }
 
 group = 'com.example'
@@ -29,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	testJavaagent("net.bytebuddy:byte-buddy-agent:1.14.15")
 }
 
 tasks.named('test') {
