--- a/SDG/src/main/resources/application.properties
+++ b/SDG/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true 
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.properties.hibernate.format_sql=true
+
+# GOOGLE
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_PASSWORD}
+spring.security.oauth2.client.registration.google.scope=profile,email
